--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="quoteDisplay">
       <!-- quote goes here -->
     </div>
-    <button onclick="newQuote()">Another Quote</button>
+    <button onclick="newQuote()">Next Quote</button>
     <script type="text/javascript" src="javascript.js">
     </script>
   </body>
